--- a/app/src/main/res/layout/retrun_ticket_fragment.xml
+++ b/app/src/main/res/layout/retrun_ticket_fragment.xml
@@ -66,7 +66,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="Agent Name" />
+                    android:text="Site Name" />
 
                 <TextView
                     android:id="@+id/tvAgentName"
