--- a/app/src/main/res/layout/navigation_header.xml
+++ b/app/src/main/res/layout/navigation_header.xml
@@ -37,7 +37,8 @@
             android:id="@+id/tvSite"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="TouqerAhmad" />
+            android:text="TouqerAhmad"
+            android:inputType="text"/>
 
     </LinearLayout>
 
