--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,8 +26,9 @@
             android:id="@+id/containerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:orientation="vertical">
 
-            android:orientation="vertical"></FrameLayout>
+        </FrameLayout>
 
         <android.support.design.widget.NavigationView xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -38,6 +39,8 @@
             app:headerLayout="@layout/navigation_header"
             app:itemTextColor="@color/black"
             app:menu="@menu/drawermenu" />
+
+
     </android.support.v4.widget.DrawerLayout>
 </LinearLayout>
 
