--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -82,6 +82,23 @@
                 android:imeOptions="actionNext"
                 android:inputType="textEmailAddress"
                 android:textColorHint="#FFF" />
+
+
+
+            <EditText
+                android:id="@+id/edSitePass"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_marginTop="20dp"
+                android:background="#29568f"
+                android:drawableLeft="@drawable/keyicon"
+                android:drawablePadding="5dp"
+                android:ems="10"
+                android:hint="Enter password"
+                android:imeOptions="actionNext"
+                android:inputType="textPassword"
+                android:textColorHint="#FFF" />
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
