--- a/app/src/main/res/layout/navigation_header.xml
+++ b/app/src/main/res/layout/navigation_header.xml
@@ -38,6 +38,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="TouqerAhmad"
+            android:gravity="center"
+            android:layout_gravity="center"
             android:inputType="text"/>
 
     </LinearLayout>
